# ACCA_2025

./: .gitignore  README.md
ACCA_2024/path_plan_cone/: setup.py
ACCA_2024/state_machine/: package.xml  setup.py
hw1/: CMakeLists.txt  package.xml
hw1/launch/: get_set.launch.py
hw1/src/: get_set_publisher.cpp  get_set_subscriber.cpp  text.txt
hw1/src/output/: get_set_publisher  get_set_subscriber
path_making/state_machine/: package.xml  setup.py
planning/: astar_rviz2.py  astar_smooth.py
python_sim/: map.pgm  package.xml  setup.cfg  setup.py
unity sim/: BS_final.db  Global_Path_maker (사본).py  Global_Path_maker.py  U-Turn.db  missions.yaml  robot_states_1.db  state_machine_gpt.py  state_selecter (사본).py  state_selecter.py  state_selecter_not.py
unity sim/Parking/: map.yaml  unity_gridmap_lidar.py  unity_parking.pgm
unity sim/Path_tracking/: cmd_pub_global_path.py  path_cmd_publisher_goback.py  stanley_2.py
unity sim/U-Turn/: DWA.py  U-Turn_DWA.py  U-Turn_Delau (사본).py  U-Turn_Delau.py  dynamic_window_approach.py  frenet_gpt.py  frenet_optimal_trajectory.py  hmmm.py  test.py  triangle.py  tuning.yaml  들로네.py
unity sim/driving/: drive.py
unity sim/lane_tracking/: DWA_lane.py
unity sim/obstacle/: APF (사본).py  APF.py  fuzzy (사본).py  fuzzy.py  obstacle.py  obstacle_apf.py
unity sim/trash/: state_pub.py
unity_script/: Camera.cs  ERP42Controller.cs  Lidar.cs  VehicleStatePublisher.cs  cmd_sub.cs  cmd_sub2.cs  keyboard_move.cs  odometry_pub.cs
unity_script/Script/: Car 1.onnx  Car.onnx  ImageRawTexture.renderTexture  ScenePathDrawer.cs  cmd_sub.cs  (+3 more)
(+74 files in other folders)
